--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -4,3 +4,15 @@ services:
   _defaults:
     autowire: true
     autoconfigure: true
+
+    SmartAssert\DoctrineInspectors\EntityMappingInspector: ~
+    SmartAssert\InvokableLogger\ExceptionLogger:
+    SmartAssert\DoctrineInspectors\QueryInspector:
+
+    SmartAssert\ServiceStatusInspector\ServiceStatusInspectorInterface:
+      class: SmartAssert\ServiceStatusInspector\ServiceStatusInspector
+      public: true
+      calls:
+        - addExceptionHandler: ['@SmartAssert\InvokableLogger\ExceptionLogger']
+        - setComponentInspector: ['database_connection', '@SmartAssert\DoctrineInspectors\QueryInspector']
+        - setComponentInspector: ['database_entities', '@SmartAssert\DoctrineInspectors\EntityMappingInspector']
