--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,9 @@
     "require": {
         "php": "^8.1",
         "ext-json": "*",
+        "smartassert/doctrine-inspectors": "^1.1",
+        "smartassert/invokable-logger": "^0.3.0",
+        "smartassert/service-status-inspector": "^2.0",
         "symfony/config": "^6.0",
         "symfony/dependency-injection": "^6.0",
         "symfony/http-foundation": "^6.0",
