--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     "require": {
         "php": "^8.1",
         "ext-json": "*",
+        "doctrine/orm": "^2.11",
         "smartassert/doctrine-inspectors": "^1.1",
         "smartassert/invokable-logger": "^0.3.0",
         "smartassert/service-status-inspector": "^2.0",
@@ -53,6 +54,7 @@
         "symfony/yaml": "^6.0"
     },
     "require-dev": {
+        "doctrine/doctrine-bundle": "^2.6",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^1.5",
         "phpstan/phpstan-phpunit": "^1.1",
