--- a/Resources/config/services_test.yaml
+++ b/Resources/config/services_test.yaml
@@ -1,6 +1,3 @@
-imports:
-  - { resource: services_test_doctrine.yaml }
-
 parameters:
 
 services:
@@ -10,3 +7,6 @@ services:
 
   Psr\Log\LoggerInterface:
     class: SmartAssert\HealthCheckBundle\Tests\Services\Logger
+
+  Doctrine\ORM\EntityManagerInterface:
+    class: SmartAssert\HealthCheckBundle\Tests\Services\EntityManager
