--- a/Resources/config/services_test.yaml
+++ b/Resources/config/services_test.yaml
@@ -4,3 +4,9 @@ services:
   _defaults:
     autowire: true
     autoconfigure: true
+
+  Psr\Log\LoggerInterface:
+    class: SmartAssert\HealthCheckBundle\Tests\Services\Logger
+
+  Doctrine\ORM\EntityManagerInterface:
+    class: SmartAssert\HealthCheckBundle\Tests\Services\EntityManager
