--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,10 @@
     "require": {
         "php": "^8.1",
         "ext-json": "*",
+        "doctrine/orm": "^2.11",
+        "smartassert/doctrine-inspectors": "^1.2",
+        "smartassert/invokable-logger": "^0.3.0",
+        "smartassert/service-status-inspector": "^2.0",
         "symfony/config": "^6.0",
         "symfony/dependency-injection": "^6.0",
         "symfony/http-foundation": "^6.0",
@@ -50,11 +54,14 @@
         "symfony/yaml": "^6.0"
     },
     "require-dev": {
+        "mockery/mockery": "^1.5",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^1.5",
+        "phpstan/phpstan-mockery": "^1.0",
         "phpstan/phpstan-phpunit": "^1.1",
         "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "^3.6"
+        "squizlabs/php_codesniffer": "^3.6",
+        "webignition/object-reflector": "^1.0"
     },
     "config": {
         "sort-packages": true,
