--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,10 @@
         "phpstan/phpstan-phpunit": "^1.1",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.6",
+        "symfony/browser-kit": "^6.0",
+        "symfony/framework-bundle": "^6.0",
+        "symfony/monolog-bundle": "^3.7",
+        "symfony/routing": "^6.0",
         "webignition/object-reflector": "^1.0"
     },
     "config": {
