--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -20,7 +20,7 @@ services:
       $inspector: '@SmartAssert\DoctrineInspectors\QueryInspector'
       $identifier: 'database_connection'
     tags:
-      - { name: 'health_check_bundle.component_inspector' }
+      - { name: 'health_check_bundle.component_inspector.health_check' }
 
   smartassert.health_check_bundle.doctrine_inspectors.entity_mapping:
     class: SmartAssert\HealthCheckBundle\Services\DoctrineInspector
@@ -28,7 +28,7 @@ services:
       $inspector: '@SmartAssert\DoctrineInspectors\EntityMappingInspector'
       $identifier: 'database_entities'
     tags:
-      - { name: 'health_check_bundle.component_inspector' }
+      - { name: 'health_check_bundle.component_inspector.health_check' }
 
   SmartAssert\InvokableLogger\ExceptionLogger: ~
 
@@ -36,11 +36,11 @@ services:
     arguments:
       $invokableExceptionLogger: '@SmartAssert\InvokableLogger\ExceptionLogger'
     tags:
-      - { name: 'health_check_bundle.exception_logger' }
+      - { name: 'health_check_bundle.exception_logger.health_check' }
 
   smartassert.health_check_bundle.service_status_inspector.health_check:
     class: SmartAssert\ServiceStatusInspector\ServiceStatusInspector
     public: true
     calls:
-      - setComponentInspectors: [!tagged { tag: 'health_check_bundle.component_inspector', index_by: 'key' }]
-      - setExceptionHandlers: [!tagged { tag: 'health_check_bundle.exception_logger', index_by: 'key' }]
+      - setComponentInspectors: [!tagged { tag: 'health_check_bundle.component_inspector.health_check' }]
+      - setExceptionHandlers: [!tagged { tag: 'health_check_bundle.exception_logger.health_check' }]
