Define status routing

--- a/Resources/config/routes.yaml
+++ b/Resources/config/routes.yaml
@@ -1,3 +1,7 @@
 health-check:
-  path: '%health_check_bundle_route_path%'
+  path: '%health_check_bundle_health_check_path%'
   controller: SmartAssert\HealthCheckBundle\Controller\HealthCheckController::get
+
+status:
+  path: '%health_check_bundle_status_path%'
+  controller: SmartAssert\HealthCheckBundle\Controller\StatusController::get
