--- a/Resources/config/services_test.yaml
+++ b/Resources/config/services_test.yaml
@@ -14,3 +14,19 @@ services:
   health_check_bundle.test.public_router:
     alias: Symfony\Component\Routing\RouterInterface
     public: true
+
+  health_check_bundle.test.status_inspector.service1:
+    class: SmartAssert\ServiceStatusInspector\ComponentInspector
+    arguments:
+      $identifier: 'service1'
+      $isAvailable: true
+    tags:
+      - { name: 'health_check_bundle.component_inspector.status' }
+
+  health_check_bundle.test.status_inspector.service2:
+    class: SmartAssert\ServiceStatusInspector\ComponentInspector
+    arguments:
+      $identifier: 'service2'
+      $isAvailable: false
+    tags:
+      - { name: 'health_check_bundle.component_inspector.status' }
