--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "smartassert/service-status-inspector": "^4.0",
         "symfony/config": "^6.0",
         "symfony/dependency-injection": "^6.0",
+        "symfony/dotenv": "^6.0",
         "symfony/http-foundation": "^6.0",
         "symfony/http-kernel": "^6.0",
         "symfony/yaml": "^6.0"
