--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,10 @@
         bootstrap="vendor/autoload.php"
         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
 >
+  <php>
+    <env name="HEALTH_CHECK_BUNDLE_ENABLE_STATUS_READINESS_INSPECTOR" value="0" />
+  </php>
+
   <coverage includeUncoveredFiles="false" processUncoveredFiles="false">
     <include>
       <directory suffix=".php">./src</directory>
