--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,10 @@
         bootstrap="vendor/autoload.php"
         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
 >
+  <php>
+    <env name="APP_ENV" value="test" />
+  </php>
+
   <coverage includeUncoveredFiles="false" processUncoveredFiles="false">
     <include>
       <directory suffix=".php">./src</directory>
