--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,6 +16,7 @@
 >
   <php>
     <env name="APP_ENV" value="test" />
+    <env name="HEALTH_CHECK_BUNDLE_ENABLE_STATUS_READINESS_INSPECTOR" value="0" />
   </php>
 
   <coverage includeUncoveredFiles="false" processUncoveredFiles="false">
