--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,20 +28,5 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --no-progress --prefer-dist --optimize-autoloader
 
-      - name: Run tests without readiness check enabled
-        run: composer test
-
-      - name: Run tests with readiness inspector enabled and false
-        env:
-          APP_ENV: test_readiness_inspector_enabled_and_false
-        run: composer test
-
-      - name: Run tests with readiness inspector enabled and true
-        env:
-          APP_ENV: test_readiness_inspector_enabled_and_true
-        run: composer test
-
-      - name: Run tests with version inspector enabled and true
-        env:
-          APP_ENV: test_version_inspector_enabled
-        run: composer test
+      - name: Run tests
+        run: composer test-ci
