--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,7 @@
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-mockery": "^1.1",
         "phpstan/phpstan-phpunit": "^1.3",
-        "phpunit/phpunit": "9.6.*",
+        "phpunit/phpunit": "^10.2",
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/browser-kit": "^6.0",
         "symfony/framework-bundle": "^6.0",
