--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,32 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- http://www.phpunit.de/manual/current/en/appendixes.configuration.html -->
-<phpunit
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        backupGlobals="false"
-        backupStaticAttributes="false"
-        colors="true"
-        convertErrorsToExceptions="true"
-        convertNoticesToExceptions="true"
-        convertWarningsToExceptions="true"
-        processIsolation="false"
-        stopOnError="true"
-        stopOnFailure="true"
-        bootstrap="vendor/autoload.php"
-        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
->
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" backupGlobals="false" colors="true" processIsolation="false" stopOnError="true" stopOnFailure="true" bootstrap="vendor/autoload.php" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.2/phpunit.xsd" cacheDirectory=".phpunit.cache" backupStaticProperties="false">
   <php>
-    <env name="APP_ENV" value="test" />
+    <env name="APP_ENV" value="test"/>
   </php>
-
-  <coverage includeUncoveredFiles="false" processUncoveredFiles="false">
-    <include>
-      <directory suffix=".php">./src</directory>
-    </include>
-  </coverage>
+  <coverage includeUncoveredFiles="false"/>
   <testsuites>
     <testsuite name="Default Test Suite">
       <directory>Tests/Unit</directory>
       <directory>Tests/Functional</directory>
     </testsuite>
   </testsuites>
+  <source>
+    <include>
+      <directory suffix=".php">./src</directory>
+    </include>
+  </source>
 </phpunit>
