--- a/.github/workflows/standards.yml
+++ b/.github/workflows/standards.yml
@@ -19,11 +19,13 @@ jobs:
         run: composer cs-fixer-dry-run
 
   phpcs:
-    name: PHPCS - PHP ${{ matrix.php }}
+    name: PHPCS - PHP ${{ matrix.php }} symfony/${{ matrix.symfony }}
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
         php: ['8.1']
+        symfony: ['6.2.*', '6.3.*']
+
     runs-on: ${{ matrix.operating-system }}
 
     steps:
@@ -36,7 +38,9 @@ jobs:
           php-version: ${{ matrix.php }}
 
       - name: Install Composer dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
+        run: |
+          sed -i 's/"\^6.0 || \^6.1 || \^6.2 || \^6.3"/\"${{ matrix.symfony }}"/g' composer.json
+          composer install --no-progress --prefer-dist --optimize-autoloader
 
       - name: Run
         run: composer cs-phpcs
