--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -8,11 +8,13 @@ on:
 
 jobs:
   phpstan:
-    name: PHPStan - PHP ${{ matrix.php }}
+    name: PHPStan - PHP ${{ matrix.php }} symfony/${{ matrix.symfony }}
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
         php: ['8.1']
+        symfony: ['6.2.*', '6.3.*']
+
     runs-on: ${{ matrix.operating-system }}
 
     steps:
@@ -25,7 +27,9 @@ jobs:
           php-version: ${{ matrix.php }}
 
       - name: Install Composer dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
+        run: |
+          sed -i 's/"\^6.0 || \^6.1 || \^6.2 || \^6.3"/\"${{ matrix.symfony }}"/g' composer.json
+          composer install --no-progress --prefer-dist --optimize-autoloader
 
       - name: PHPStan
         run: composer static-analysis
