--- a/composer.json
+++ b/composer.json
@@ -53,11 +53,11 @@
         "smartassert/doctrine-inspectors": "^1.2",
         "smartassert/invokable-logger": "^0.3.0",
         "smartassert/service-status-inspector": "^5.0",
-        "symfony/config": "^6.0",
-        "symfony/dependency-injection": "^6.0",
-        "symfony/http-foundation": "^6.0",
-        "symfony/http-kernel": "^6.0",
-        "symfony/yaml": "^6.0"
+        "symfony/config": "^6.0 || ^6.1 || ^6.2 || ^6.3",
+        "symfony/dependency-injection": "^6.0 || ^6.1 || ^6.2 || ^6.3",
+        "symfony/http-foundation": "^6.0 || ^6.1 || ^6.2 || ^6.3",
+        "symfony/http-kernel": "^6.0 || ^6.1 || ^6.2 || ^6.3",
+        "symfony/yaml": "^6.0 || ^6.1 || ^6.2 || ^6.3"
     },
     "require-dev": {
         "mockery/mockery": "^1.5",
@@ -67,10 +67,10 @@
         "phpstan/phpstan-phpunit": "^1.3",
         "phpunit/phpunit": "^10.2",
         "squizlabs/php_codesniffer": "^3.6",
-        "symfony/browser-kit": "^6.0",
-        "symfony/framework-bundle": "^6.0",
+        "symfony/browser-kit": "^6.0 || ^6.1 || ^6.2 || ^6.3",
+        "symfony/framework-bundle": "^6.0 || ^6.1 || ^6.2 || ^6.3",
         "symfony/monolog-bundle": "^3.7",
-        "symfony/routing": "^6.0",
+        "symfony/routing": "^6.0 || ^6.1 || ^6.2 || ^6.3",
         "webignition/object-reflector": "^1.0"
     },
     "config": {
