--- a/.github/workflows/standards.yml
+++ b/.github/workflows/standards.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Install Composer dependencies
         run: |
-          sed -i 's/"\^6.0 || \^6.1 || \^6.2 || \^6.3"/\"${{ matrix.symfony }}"/g' composer.json
+          sed -i 's/"\^6.2 || \^6.3"/\"${{ matrix.symfony }}"/g' composer.json
           composer install --no-progress --prefer-dist --optimize-autoloader
 
       - name: Run
