--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
         "phpstan/phpstan-mockery": "^1.1",
         "phpstan/phpstan-phpunit": "^1.3",
         "phpunit/phpunit": "^10.2",
-        "squizlabs/php_codesniffer": "^3.6",
+        "squizlabs/php_codesniffer": "dev-master#2e59060b93b3720ff3aab2b57efda0c3ada069b0",
         "symfony/browser-kit": "^6.2 || ^6.3",
         "symfony/framework-bundle": "^6.2 || ^6.3",
         "symfony/monolog-bundle": "^3.7",
