--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         ]
     },
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "ext-json": "*",
         "doctrine/orm": "^2.11",
         "smartassert/doctrine-inspectors": "^1.2",
@@ -66,7 +66,7 @@
         "phpstan/phpstan-mockery": "^1.1",
         "phpstan/phpstan-phpunit": "^1.3",
         "phpunit/phpunit": "^10.2",
-        "squizlabs/php_codesniffer": "^3.6",
+        "squizlabs/php_codesniffer": "dev-master#2e59060b93b3720ff3aab2b57efda0c3ada069b0",
         "symfony/browser-kit": "^6.2 || ^6.3",
         "symfony/framework-bundle": "^6.2 || ^6.3",
         "symfony/monolog-bundle": "^3.7",
