--- a/.github/workflows/standards.yml
+++ b/.github/workflows/standards.yml
@@ -25,6 +25,7 @@ jobs:
         operating-system: [ubuntu-latest]
         php: ['8.2', '8.3']
         symfony: ['6.4.*', '7.0.*']
+        doctrine-orm: ['^2', '^3']
 
     runs-on: ${{ matrix.operating-system }}
 
@@ -40,6 +41,7 @@ jobs:
       - name: Install Composer dependencies
         run: |
           sed -i 's/"\^6.4 || \^7.0"/\"${{ matrix.symfony }}"/g' composer.json
+          sed -i 's/"\^2 || \^3"/\"${{ matrix.doctrine-orm }}"/g' composer.json
           composer install --no-progress --prefer-dist --optimize-autoloader
 
       - name: Run
