--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   unit:
-    name: PHPUnit tests - PHP ${{ matrix.php }} symfony/${{ matrix.symfony }}
+    name: PHPUnit tests - PHP ${{ matrix.php }} symfony/${{ matrix.symfony }} doctrine/orm ${{ matrix.doctrine-orm }}
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
