--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -8,12 +8,13 @@ on:
 
 jobs:
   phpstan:
-    name: PHPStan - PHP ${{ matrix.php }} symfony/${{ matrix.symfony }}
+    name: PHPStan - PHP ${{ matrix.php }} symfony/${{ matrix.symfony }} doctrine/orm ${{ matrix.doctrine-orm }}
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
         php: ['8.2', '8.3']
         symfony: ['6.4.*', '7.0.*']
+        doctrine-orm: ['^2', '^3']
 
     runs-on: ${{ matrix.operating-system }}
 
@@ -29,6 +30,7 @@ jobs:
       - name: Install Composer dependencies
         run: |
           sed -i 's/"\^6.4 || \^7.0"/\"${{ matrix.symfony }}"/g' composer.json
+          sed -i 's/"\^2 || \^3"/\"${{ matrix.doctrine-orm }}"/g' composer.json
           composer install --no-progress --prefer-dist --optimize-autoloader
 
       - name: PHPStan
