--- a/.github/workflows/standards.yml
+++ b/.github/workflows/standards.yml
@@ -19,12 +19,12 @@ jobs:
         run: composer cs-fixer-dry-run
 
   phpcs:
-    name: PHPCS - PHP ${{ matrix.php }} symfony/${{ matrix.symfony }} doctrine/orm ${{ matrix.doctrine-orm }}
+    name: PHPCS - PHP ${{ matrix.php }} doctrine/orm ${{ matrix.doctrine-orm }}
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
         php: ['8.2', '8.3']
-        symfony: ['6.4.*', '7.0.*']
+        symfony: ['7.0.*']
         doctrine-orm: ['^2', '^3']
 
     runs-on: ${{ matrix.operating-system }}
@@ -40,7 +40,6 @@ jobs:
 
       - name: Install Composer dependencies
         run: |
-          sed -i 's/"\^6.4 || \^7.0"/\"${{ matrix.symfony }}"/g' composer.json
           sed -i 's/"\^2 || \^3"/\"${{ matrix.doctrine-orm }}"/g' composer.json
           composer install --no-progress --prefer-dist --optimize-autoloader
 
