--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,13 +8,13 @@ on:
 
 jobs:
   unit:
-    name: PHPUnit tests - PHP ${{ matrix.php }} symfony/${{ matrix.symfony }} doctrine/orm ${{ matrix.doctrine-orm }}
+    name: PHPUnit tests - PHP ${{ matrix.php }}
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
         php: ['8.2', '8.3']
-        symfony: ['6.4.*', '7.0.*']
-        doctrine-orm: ['^2', '^3']
+        symfony: ['7.0.*']
+        doctrine-orm: ['^3']
 
     runs-on: ${{ matrix.operating-system }}
 
@@ -28,10 +28,7 @@ jobs:
           php-version: ${{ matrix.php }}
 
       - name: Install Composer dependencies
-        run: |
-          sed -i 's/"\^6.4 || \^7.0"/\"${{ matrix.symfony }}"/g' composer.json
-          sed -i 's/"\^2 || \^3"/\"${{ matrix.doctrine-orm }}"/g' composer.json
-          composer install --no-progress --prefer-dist --optimize-autoloader
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
 
       - name: Run tests
         run: composer test-ci
