--- a/.github/workflows/standards.yml
+++ b/.github/workflows/standards.yml
@@ -19,13 +19,12 @@ jobs:
         run: composer cs-fixer-dry-run
 
   phpcs:
-    name: PHPCS - PHP ${{ matrix.php }}
+    name: PHPCS - PHP ${{ matrix.php }}  symfony/${{ matrix.symfony }}
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
         php: ['8.2', '8.3']
-        symfony: ['7.0.*']
-        doctrine-orm: ['^3']
+        symfony: ['7.0.*', '7.1.*', '7.2.*']
 
     runs-on: ${{ matrix.operating-system }}
 
@@ -39,7 +38,9 @@ jobs:
           php-version: ${{ matrix.php }}
 
       - name: Install Composer dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
+        run: |
+          sed -i 's/"\^7.0 || \^7.1 || \^7.2"/\"${{ matrix.symfony }}"/g' composer.json
+          composer install --no-progress --prefer-dist --optimize-autoloader
 
       - name: Run
         run: composer cs-phpcs
