--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
         "phpstan/phpstan-mockery": "^2.0",
         "phpstan/phpstan-phpunit": "^2.0",
         "phpunit/phpunit": "^10.2",
-        "squizlabs/php_codesniffer": "dev-master#2e59060b93b3720ff3aab2b57efda0c3ada069b0",
+        "squizlabs/php_codesniffer": "^4.0",
         "symfony/browser-kit": "^7.0 || ^7.1 || ^7.2",
         "symfony/framework-bundle": "^7.0 || ^7.1 || ^7.2",
         "symfony/monolog-bundle": "^3.7",
