--- a/composer.json
+++ b/composer.json
@@ -53,11 +53,11 @@
         "smartassert/doctrine-inspectors": "^3.0",
         "smartassert/invokable-logger": "^0.3.0",
         "smartassert/service-status-inspector": "^6.0",
-        "symfony/config": "7.3",
-        "symfony/dependency-injection": "7.3",
-        "symfony/http-foundation": "7.3",
-        "symfony/http-kernel": "7.3",
-        "symfony/yaml": "7.3"
+        "symfony/config": "^7.3",
+        "symfony/dependency-injection": "^7.3",
+        "symfony/http-foundation": "^7.3",
+        "symfony/http-kernel": "^7.3",
+        "symfony/yaml": "^7.3"
     },
     "require-dev": {
         "mockery/mockery": "^1.5",
@@ -67,10 +67,10 @@
         "phpstan/phpstan-phpunit": "^2.0",
         "phpunit/phpunit": "^10.2",
         "squizlabs/php_codesniffer": "^4.0",
-        "symfony/browser-kit": "7.3",
-        "symfony/framework-bundle": "7.3",
+        "symfony/browser-kit": "^7.3",
+        "symfony/framework-bundle": "^7.3",
         "symfony/monolog-bundle": "^3.7",
-        "symfony/routing": "7.3",
+        "symfony/routing": "^7.3",
         "webignition/object-reflector": "^1.0"
     },
     "config": {
