--- a/composer.json
+++ b/composer.json
@@ -53,11 +53,11 @@
         "smartassert/doctrine-inspectors": "^3.0",
         "smartassert/invokable-logger": "^0.3.0",
         "smartassert/service-status-inspector": "^6.0",
-        "symfony/config": "^7.0 || ^7.1 || ^7.2",
-        "symfony/dependency-injection": "^7.0 || ^7.1 || ^7.2",
-        "symfony/http-foundation": "^7.0 || ^7.1 || ^7.2",
-        "symfony/http-kernel": "^7.0 || ^7.1 || ^7.2",
-        "symfony/yaml": "^7.0 || ^7.1 || ^7.2"
+        "symfony/config": "^7.3",
+        "symfony/dependency-injection": "^7.3",
+        "symfony/http-foundation": "^7.3",
+        "symfony/http-kernel": "^7.3",
+        "symfony/yaml": "^7.3"
     },
     "require-dev": {
         "mockery/mockery": "^1.5",
@@ -66,11 +66,11 @@
         "phpstan/phpstan-mockery": "^2.0",
         "phpstan/phpstan-phpunit": "^2.0",
         "phpunit/phpunit": "^10.2",
-        "squizlabs/php_codesniffer": "dev-master#2e59060b93b3720ff3aab2b57efda0c3ada069b0",
-        "symfony/browser-kit": "^7.0 || ^7.1 || ^7.2",
-        "symfony/framework-bundle": "^7.0 || ^7.1 || ^7.2",
+        "squizlabs/php_codesniffer": "^4.0",
+        "symfony/browser-kit": "^7.3",
+        "symfony/framework-bundle": "^7.3",
         "symfony/monolog-bundle": "^3.7",
-        "symfony/routing": "^7.0 || ^7.1 || ^7.2",
+        "symfony/routing": "^7.3",
         "webignition/object-reflector": "^1.0"
     },
     "config": {
