--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -8,11 +8,12 @@ on:
 
 jobs:
   phpstan:
-    name: PHPStan - PHP ${{ matrix.php }}
+    name: PHPStan - PHP ${{ matrix.php }} doctrine/orm ${{ matrix.doctrine-orm }}
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
         php: ['8.4']
+        doctrine-orm: ['^3', '^4']
 
     runs-on: ${{ matrix.operating-system }}
 
@@ -26,7 +27,9 @@ jobs:
           php-version: ${{ matrix.php }}
 
       - name: Install Composer dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
+        run: |
+          sed -i 's/"\^3 || \^4"/\"${{ matrix.doctrine-orm }}"/g' composer.json
+          composer install --no-progress --prefer-dist --optimize-autoloader
 
       - name: PHPStan
         run: composer static-analysis
