--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
     "require": {
         "php": "^8.4",
         "ext-json": "*",
-        "doctrine/orm": "^3",
+        "doctrine/orm": "^3 || ^4",
         "smartassert/doctrine-inspectors": "^3.0",
         "smartassert/invokable-logger": "^0.3.0",
         "smartassert/service-status-inspector": "^6.0",
