--- a/.github/workflows/standards.yml
+++ b/.github/workflows/standards.yml
@@ -13,10 +13,15 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
-      - name: Run
-        run: composer cs-fixer-dry-run
+      - name: Setup php
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+
+      - name: Install Composer dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
 
   phpcs:
     name: PHPCS - PHP ${{ matrix.php }}
