--- a/composer.json
+++ b/composer.json
@@ -52,11 +52,11 @@
         "smartassert/doctrine-inspectors": "^4.0",
         "smartassert/invokable-logger": "^0.3.0",
         "smartassert/service-status-inspector": "^6.0",
-        "symfony/config": "^7.3",
-        "symfony/dependency-injection": "^7.3",
-        "symfony/http-foundation": "^7.3",
-        "symfony/http-kernel": "^7.3",
-        "symfony/yaml": "^7.3"
+        "symfony/config": "^7 || ^8",
+        "symfony/dependency-injection": "^7 || ^8",
+        "symfony/http-foundation": "^7 || ^8",
+        "symfony/http-kernel": "^7 || ^8",
+        "symfony/yaml": "^7 || ^8"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.89",
@@ -66,10 +66,10 @@
         "phpstan/phpstan-mockery": "^2.0",
         "phpstan/phpstan-phpunit": "^2.0",
         "phpunit/phpunit": "^12",
-        "symfony/browser-kit": "^7.3",
-        "symfony/framework-bundle": "^7.3",
+        "symfony/browser-kit": "^7 || ^8",
+        "symfony/framework-bundle": "^7 || ^8",
         "symfony/monolog-bundle": "^3.7",
-        "symfony/routing": "^7.3",
+        "symfony/routing": "^7 || ^8",
         "webignition/object-reflector": "^1.0"
     },
     "config": {
